# diffusion

./: .gitignore  pyproject.toml
diffusion/: __main__.py  model.py  noise_scheduler.py
model/: model.pth
notebook/: inference.ipynb  model_test.ipynb  proto.ipynb  test_model.ipynb
script/: download_dataset.py
